# intervaltree

./: .ackrc  .gitignore  .travis.yml  1.txt  CHANGELOG.md  CHANGELOG.txt  Dockerfile  HACKING.md  MANIFEST.in  Makefile  README.md  README.rst  intervaltree.py  myfsutils.py  pyproject.toml  setup.cfg  setup.py  testall.sh
.github/workflows/: build.yml  flake8.yml  manual.yml  pytest.yml  tests.yml
intervaltree/: __init__.py  interval.py  intervaltree.py  keyedinterval.py  knode.py  mnode.py  node.py
intervaltree/bio/: __init__.py  test.py
requirements/: common.txt  pytest.txt
scripts/: testall.sh
test/: Issue3-recursionDepth.py  __init__.py  data_loader.py  genomeintervaltree_test.py  interval_test.py  intervals.py  intervaltree_test.py  intervaltrees.py  issue25.txt  issue25_test.py  issue26_test.py  issue4.py  issue41_test.py  match.py  optimality.py  optimality_test.py  optimality_test_matrix.py  pprint.py  progress_bar.py  restats
test/data/: __init__.py  issue25_orig.py  issue41_orig.py  issue4_result.json  issue4_result.py  ivs0.py  ivs1.py  ivs1_copy_structure.py  ivs1_float_copy_structure.py  ivs2.py  ivs3.py  ivs4.py
test/interval_methods/: __init__.py  binary_test.py  copy_test.py  sorting_test.py  str_test.py  unary_test.py
test/intervaltree_methods/: __init__.py  basic_test.py  copy_test.py  debug_test.py  delete_test.py  first_before_after_test.py  init_test.py  insert_test.py  query_test.py  restructure_test.py  setlike_test.py  special_test.py
test/issues/: __init__.py  issue25_test.py  issue26_test.py  issue27_test.py  issue4.py  issue41_test.py  issue67_test.py  issue72_test.py
test/node_methods/: str_test.py
test/optimality/: __init__.py  optimality_test.py  optimality_test_matrix.py
tests/: __init__.py  genomeintervaltree_test.py  intervaltree_test.py
utils/: doc.py  fs.py  version.py
