[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intervaltree"
description='Editable interval tree data structure for Python 2 and 3'
version = "3.2.1"
authors = [
  { name="Chaim Leib Halbert", email="chaim.leib.halbert@gmail.com" },
  { name="Konstantin Tretyakov" },
]
readme = "README.md"
requires-python = ">=2.7.18, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
license = "Apache-2.0"
keywords = ['interval-tree', 'data-structure', 'intervals', 'tree']
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Programming Language :: Python :: Implementation :: PyPy',
        'Intended Audience :: Developers',
        'Intended Audience :: Information Technology',
        'Intended Audience :: Science/Research',
        'Programming Language :: Python',
        'Programming Language :: Python :: 2',
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Python :: 3.14',
        'License :: OSI Approved :: Apache Software License',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Scientific/Engineering :: Bio-Informatics',
        'Topic :: Scientific/Engineering :: Information Analysis',
        'Topic :: Software Development :: Libraries',
        'Topic :: Text Processing :: General',
        'Topic :: Text Processing :: Linguistic',
        'Topic :: Text Processing :: Markup',
]
dependencies = [
  "sortedcontainers",
]

[project.urls]
Homepage = "https://github.com/chaimleib/intervaltree"
Issues = "https://github.com/chaimleib/intervaltree/issues"

[tool.pytest.ini_options]
addopts = [
  '--doctest-modules',
  '--doctest-glob=README.md',
]
norecursedirs = [
  'bin',
  'build',
  'dist',
  'intervaltree.egg-info',
  'requirements',
  'test/data',
  '.cache',
  '.eggs',
  '.git',
  '.github',
  '.idea',
  '.pytest_cache',
  '.tox',
  '.vscode',
]
